--- a/Konspector/wwwroot/index.html
+++ b/Konspector/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="Konspector.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script src="js/util.js"></script>
 </head>
 
 <body>
