--- a/Konspector/wwwroot/index.html
+++ b/Konspector/wwwroot/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Konspector</title>
-    <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="Konspector.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <script src="js/util.js"></script>
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+   <title>Konspector</title>
+   <base href="/" />
+   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+   <link rel="stylesheet" href="css/app.css" />
+   <link rel="stylesheet" href="Konspector.styles.css" />
+   <link rel="icon" type="image/png" href="favicon.png" />
+
+   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+   <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+   <script src="js/util.js"></script>
 </head>
 
 <body>
 
-    <div class="status-bar-safe-area"></div>
+   <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+   <div id="app">Loading...</div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
+   <div id="blazor-error-ui">
+      An unhandled error has occurred.
+      <a href="" class="reload">Reload</a>
+      <a class="dismiss">🗙</a>
+   </div>
 
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
+   <script src="_framework/blazor.webview.js" autostart="false"></script>
 
+   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+   <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
+   <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 </body>
 
 </html>
