--- a/Konspector/wwwroot/index.html
+++ b/Konspector/wwwroot/index.html
@@ -7,11 +7,12 @@
    <base href="/" />
    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
    <link rel="stylesheet" href="css/app.css" />
+   <link rel="stylesheet" href="css/faall.min.css" />
    <link rel="stylesheet" href="Konspector.styles.css" />
    <link rel="icon" type="image/png" href="favicon.png" />
 
-   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-   <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+   <link href="css/quill.snow.css" rel="stylesheet">
+   <link href="css/quill.bubble.css" rel="stylesheet">
 
    <script src="js/util.js"></script>
 </head>
@@ -30,7 +31,7 @@
 
    <script src="_framework/blazor.webview.js" autostart="false"></script>
 
-   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+   <script src="js/quill.js"></script>
    <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
    <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
 </body>
